--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
       <nav>
         <span>
           <a href="#mission">Mission</a>
+        </span>
+        <span>
           <a href="#tore">Featured Tea</a>
+        </span>
+        <span>
           <a href="#locations">Locations</a>
+        </span>
       </nav>
     </header>
     <main>
